[package]
name = "mapper"
version = "0.1.0"
edition = "2021"
description = "CLI tool to parse linker map file"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
csv = "1.2.2"
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
